3.0.8/4.0.8
- change    - move position of 3D Trailer insert - follows more closely to an actual theatre
- fix       - allow testing for trivia rating to be set to N/A
- add       - add other playlist types, now .pls, .asf, .ram and .m3u 

3.0.7/4.0.7
- fix       - add missing module import
- add       - SABnzbd control to home automation module
- change    - convert all file access to use the xbmcvfs module.  Thanks h0tw1r3
- fix       - fixed skipping trailers that use plug-ins to play
- fix       - properly end script - clear all variables
- change    - remove old trailer downloader module
- change    - remove jsonrpc folder/file listing in favour of xbmcvfs.listdir()
- change    - change all logging to use the utils.log() function
- change    - change method of waiting for movie to play(override play button setting)
- change    - general code clean up
- add       - handle .pls playlist files for music and video
- change    - new method of reloading settings after settings have been changed 
- add       - Brazilian Movie Rating support
- change    - Apple Trailers now pull trailers from Current
- add       - Gotham - Add back Refresh control
- add       - Gotham - Add back screensaver control
- change    - Gotham - Change pause/resume method sensing
- add       - 3D Intro/Outro/Trailers
- change    - removed ancient httpapi code that still lingered

3.0.6
- fix       - version bump to fix Skin folder name on XBMC Addon Git

3.0.5
- fix       - Movie playing behind trivia
- fix       - Stop trivia music from playing if it is not selected in settings
- fix       - add back missing audio formats
- add       - Allow each type of slide to have a specified timer.
- fix       - Corrected case for trivia skin
- add       - Allow slides.xml to be title case(ie Slides.xml)
- change    - cosmetics

3.0.4
- fix       - setting error for a single music file during trivia
- change    - code clean up
- add       - FSK Ratings added, along with converting to near MPAA rating
