@@ -2,6 +2,7 @@
 - change    - move position of 3D Trailer insert - follows more closely to an actual theatre
 - fix       - allow testing for trivia rating to be set to N/A
 - add       - add other playlist types, now .pls, .asf, .ram and .m3u 
+- fix       - fix skin property window
 
 3.0.7/4.0.7
 - fix       - add missing module import
